# pathistics

./: .dockerignore  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  eslint.config.js  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  render.yaml  tsconfig.json  turbo.json
.github/workflows/: all-checks.yml  deploy-backend-api-app.yml  deploy-frontend-web-app.yml  e2e-tests.yml  integration-tests.yml  lint.yml  unit-tests.yml
apps/api/: .env.example  .gitignore  Dockerfile  package.json  pyproject.toml  requirements.txt
apps/api/apps/trips/: admin.py  eld_engine.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/api/apps/trips/migrations/: 0001_initial.py
apps/api/apps/trips/tests/: test_integration.py  test_unit.py
apps/api/config/: settings.py  urls.py
apps/web/: .env.example  Dockerfile  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/config/: env.ts
apps/web/src/hooks/: useLocalStorage.ts  useTripPlan.ts  useTripPlan.unit.test.tsx
apps/web/src/layouts/: Footer.tsx  Header.tsx  MainLayout.tsx
apps/web/src/pages/: Dashboard.tsx  History.tsx  NotFoundPage.tsx  TripDetails.tsx
apps/web/src/routes/: index.tsx
apps/web/src/styles/: global.css  globals.css  theme.ts
apps/web/src/types/: eld.types.ts  trip.types.ts
apps/web/src/utils/: eldCalculator.ts  eldCalculator.unit.test.tsx  eldDrawer.ts  eldDrawer.unit.test.tsx  formatting.ts  (+1 more)
(+15 files in other folders)
