[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathistics_api"
version = "0.1.0"
description = "Smart ELD Trip Planner and Log Manager"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "django==6.0.6",
    "django-cors-headers==4.9.0",
    "django-environ==0.13.0",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.29.0",
    "geographiclib==2.1",
    "geopy==2.4.1",
    "gunicorn==26.0.0",
    "idna==3.18",
    "inflection==0.5.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "packaging==26.2",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.34.2",
    "rpds-py==2026.5.1",
    "sqlparse==0.5.5",
    "uritemplate==4.2.0",
    "urllib3==2.7.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "apps*"]